--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bruh</title>
+    <title>Komponent kopia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+
+    </nav>
+    <main class="container">
+        <div class="card-group">
+            <div class="card">
+                <img src="../images/cat.jpg" alt="Cat">
+                <button class="card-button-news">News</button>
+                <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+                <div class="card-footer">
+                    <a href="#" class="card-button-read">Read more</a>
+                </div>
+                
+            </div>
+            <div class="card">
+                <img src="../images/cat.jpg" alt="Cat">
+                <button class="card-button-news">News</button>
+                <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+                <div class="card-footer">
+                    <a href="#" class="card-button-read">Read more</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../images/cat.jpg" alt="Cat">
+                <button class="card-button-news">News</button>
+                <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+                <div class="card-footer">
+                    <a href="#" class="card-button-read">Read more</a>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
