✨ zoom on hover

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <main class="container">
         <div class="card-group">
             <div class="card">
-                <img src="../images/cat.jpg" alt="Cat">
+                <div class="card-img-wrapper">
+                    <img src="../images/cat.jpg" alt="Cat">
+                </div>
                 <button class="card-button-news">News</button>
                 <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
                 <div class="card-footer">
@@ -23,7 +25,9 @@
                 
             </div>
             <div class="card">
-                <img src="../images/cat.jpg" alt="Cat">
+                <div class="card-img-wrapper">
+                    <img src="../images/cat.jpg" alt="Cat">
+                </div>
                 <button class="card-button-news">News</button>
                 <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
                 <div class="card-footer">
@@ -31,7 +35,9 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../images/cat.jpg" alt="Cat">
+                <div class="card-img-wrapper">
+                    <img src="../images/cat.jpg" alt="Cat">
+                </div>
                 <button class="card-button-news">News</button>
                 <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
                 <div class="card-footer">
