--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-
+    <nav class="nav">
+        <img src="images/cat.jpg" alt="Cat">
+        <div class="nav-inner">
+            
+            <ul class="nav-inner-ul">
+                <li><a href="">About</a></li>
+                <li><a href="">Games</a></li>
+                <li><a href="">Jobs</a></li>
+                <li><a href="">Business Solutions</a></li>
+            </ul>
+            <ul class="nav-inner-lang">
+                <li class="nav-lang"><a href="">En</a></li>
+                <li class="nav-lang">/</li>
+                <li class="nav-lang"><a href="">Fr</a></li>
+            </ul>
+        </div>
+        
     </nav>
     <main class="container">
         <div class="card-group">
